# tterm

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  crates.nix  flake.nix  rust-toolchain.toml
src/: app.rs  cli.rs  config.rs  main.rs  multiplex.rs
src/app/: components.rs  mode.rs  state.rs
src/app/components/: keybind_bar.rs  tab_bar.rs  webview_modal.rs
src/app/mode/: terminal.rs  webview.rs
src/app/mode/terminal/: components.rs
src/app/mode/terminal/components/: tab_bar.rs
src/app/mode/terminal/components/multiplex/: tab.rs
src/app/mode/webview/: mod.rs
src/app/mode/webview/components/: modal.rs
src/app/state/: db.rs  directory_tree.rs  tabs.rs  webview.rs
src/config/: common.rs  general.rs  keybinds.rs  presets.rs  terminal.rs  webview.rs
src/multiplex/: pane.rs  tab.rs
tterm-macros/: Cargo.toml
tterm-macros/src/: fonts.rs  lib.rs  modes.rs
tterm-macros/src/modes/: actions.rs
