[workspace]
members = ["tterm-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]

[workspace.dependencies]
iced = "0.14"
iced_aw = { version = "0.14", default-features = false }
iced_fonts = "0.3"
# iced_term = "0.8"
iced_term.git = "https://github.com/Harzu/iced_term"

directories = "6.0"

tokio = "1.52"

uuid = "1.23"

convert_case = "0.11"

chumsky = { version = "0.13", features = ["nightly"] }

bon = "3.9"
derive_more = "2.1"
smart-default = "0.7"

serde = "1.0"
ron = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"

rootcause = "0.13"
rootcause-backtrace = "0.13"

# Macros
proc-macro2 = "1.0"
syn = "2.0"
darling = "0.23"
quote = "1.0"

[package]
name = "tterm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
trace = []
comet = ["trace", "iced/debug", "iced/hot", "iced/time-travel"]

[dependencies]
tterm-macros.path = "tterm-macros"

iced = { workspace = true, features = ["advanced", "tokio"] }
iced_aw = { workspace = true, features = ["spinner", "badge"] }
iced_fonts = { workspace = true, features = ["lucide"] }
iced_term.workspace = true

directories.workspace = true

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "fs"] }

uuid = { workspace = true, features = ["v7"] }

chumsky.workspace = true

bon.workspace = true
derive_more = { workspace = true, features = ["debug", "display", "from"] }
smart-default.workspace = true

serde = { workspace = true, features = ["derive"] }
ron.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

rootcause.workspace = true
rootcause-backtrace.workspace = true
