[workspace]
members = ["tterm-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]

[workspace.dependencies]
clap = "4.6"

iced = { version = "0.14", default-features = false }
iced_aw = { version = "0.14", default-features = false }
iced_fonts = "0.3"
iced-swdir-tree = "0.9"
# iced_term = "0.8"
iced_term.git = "https://github.com/Harzu/iced_term"
# Atm think its a temporary change, depending on how this will chug along with 0.15 iced and so on
# iced_webview_v2 = { git = "https://github.com/franzos/iced_webview_v2", default-features = false }
iced_webview_v2 = { git = "https://github.com/tukanoidd/iced_webview_v2", branch = "latest_servo", default-features = false }

directories = "6.0"
shellexpand = "3.1"

tokio = "1.52"

uuid = "1.23"
url = "2.5"
convert_case = "0.11"
itertools = "0.15"

chumsky = { version = "0.13", features = ["nightly"] }

bon = "3.9"
derive_more = "2.1"
ordered-float = "5.3"
smart-default = "0.7"
strum = "0.28"

serde = "1.0"
ron = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"

rootcause = "0.13"
rootcause-backtrace = "0.13"

# Macros
proc-macro2 = "1.0"
syn = "2.0"
darling = "0.23"
quote = "1.0"

[package]
name = "tterm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
trace = []
comet = ["trace", "iced/debug", "iced/hot", "iced/time-travel"]

[dependencies]
tterm-macros.path = "tterm-macros"

clap = { workspace = true, features = ["derive"] }

iced = { workspace = true, features = [
  "wayland",
  "x11",
  "crisp",
  "wgpu",
  "linux-theme-detection",
  "web-colors",
  "advanced",
  "advanced-shaping",
  "tokio",
] }
iced_aw = { workspace = true, features = [
  "spinner",
  "badge",
  "drop_down",
  "context_menu",
] }
iced_fonts = { workspace = true, features = ["lucide"] }
iced-swdir-tree.workspace = true
iced_term.workspace = true
iced_webview_v2 = { workspace = true, features = ["servo"] }

directories.workspace = true
shellexpand.workspace = true

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "fs"] }

uuid = { workspace = true, features = ["v7"] }
url.workspace = true
itertools.workspace = true

chumsky.workspace = true

bon.workspace = true
derive_more = { workspace = true, features = ["debug", "display", "from"] }
ordered-float = { workspace = true, features = ["serde"] }
smart-default.workspace = true
strum = { workspace = true, features = ["derive"] }

serde = { workspace = true, features = ["derive"] }
ron.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

rootcause.workspace = true
rootcause-backtrace.workspace = true

[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.dev]
strip = true
opt-level = "z"
lto = true

[profile.dev.package."*"]
opt-level = 3
