[package]
name = "tterm-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
darling.workspace = true

convert_case.workspace = true

chumsky.workspace = true

quote.workspace = true
